crates/liter-llm-ffi/include/liter_llm.h

/**
 * A batch job object.
 */
typedef struct LITERLLMBatchObject LITERLLMBatchObject;
/**
 * Configuration for budget enforcement.
 */
typedef struct LITERLLMBudgetConfig LITERLLMBudgetConfig;
/**
 * Configuration for the response cache.
 */
typedef struct LITERLLMCacheConfig LITERLLMCacheConfig;
/**
 * A streamed chunk of a chat completion response.
 */
typedef struct LITERLLMChatCompletionChunk LITERLLMChatCompletionChunk;
/**
 * Chat completion request (compatible with OpenAI and similar APIs).
 */
typedef struct LITERLLMChatCompletionRequest LITERLLMChatCompletionRequest;
/**
 * Request to create a structured response.
 */
typedef struct LITERLLMCreateResponseRequest LITERLLMCreateResponseRequest;
/**
 * Default client implementation backed by `reqwest`.
 *
 * Sends requests to 140+ LLM providers with automatic provider detection
 * and per-request routing. The provider is resolved at construction time
 * from `model_hint` (or defaults to OpenAI), but individual requests can
 * override the provider via model name prefix (e.g. `"anthropic/claude-3-5-sonnet"`
 * routes to Anthropic regardless of construction-time setting).
 *
 * When the model prefix does not match any known provider, the construction-time
 * provider is used as the fallback. This enables seamless migration between
 * providers by changing only the model name.
 *
 * The provider is stored behind an `Arc` so it can be shared cheaply into
 * async closures and streaming tasks. Pre-computed auth headers and extra
 * headers are cached at construction to avoid redundant encoding on every request.
 */
typedef struct LITERLLMDefaultClient LITERLLMDefaultClient;
/**
 * Configuration for per-model rate limits.
 */
typedef struct LITERLLMRateLimitConfig LITERLLMRateLimitConfig;
/**
 * Response from a structured response request.
 */
typedef struct LITERLLMResponseObject LITERLLMResponseObject;
/**
 * Configuration for polling a batch until terminal status.
 *
 * All time values are in seconds as `f64` so the struct bridges across FFI
 * boundaries without requiring a `Duration` shim.
 */
typedef struct LITERLLMWaitForBatchConfig LITERLLMWaitForBatchConfig;
/**
 * Opaque handle owning a tokio runtime and a boxed chat-stream for iterator-style consumption.
 *
 * Created by `literllm_default_client_chat_stream_start`, advanced by `literllm_default_client_chat_stream_next`, destroyed by `literllm_default_client_chat_stream_free`.
 * The handle is NOT thread-safe — callers must ensure only one thread calls `_next` at a time.
 */
typedef struct LITERLLMLiterllmDefaultClientChatStreamStreamHandle LITERLLMLiterllmDefaultClientChatStreamStreamHandle;
/**
 * Return the last error code (0 means no error).
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * This function does not allocate and returns no owned pointer.
 */
int32_t literllm_last_error_code(void);
/**
 * Return the last error message. The pointer is borrowed and valid until the next FFI call on this thread.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * The returned pointer is borrowed from thread-local storage and must NOT be freed.
 */
const char *literllm_last_error_context(void);
/**
 * Free a string previously returned by this library.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void literllm_free_string(char *ptr);
/**
 * Free a byte buffer previously returned by this library via out-params.
 * `ptr`, `len`, and `cap` must match the values written by the library function,
 * or the call must pass `ptr = null` (in which case it is a no-op).
 * # Safety
 * Pointer must have been returned by this library (via out_ptr / out_len / out_cap
 * out-params), or be null. The len and cap values must be unchanged since the call.
 */
void literllm_free_bytes(uint8_t *ptr,
                         uintptr_t len,
                         uintptr_t cap);
/**
 * Start a streaming chat completion and return an opaque iterator handle.
 *
 * Returns null and sets `literllm_last_error_code` on failure (null pointers or stream-open error).
 * On success the caller owns the returned pointer and MUST call `literllm_default_client_chat_stream_free` when done.
 *
 * # Safety
 * `client` must be a non-null valid pointer to a live `liter_llm::DefaultClient` produced by this library.
 * `req` must be a non-null valid pointer to a live `liter_llm::ChatCompletionRequest` produced by this library.
 * Both pointers must remain valid until this function returns.
 */
struct LITERLLMLiterllmDefaultClientChatStreamStreamHandle *literllm_default_client_chat_stream_start(const LITERLLMDefaultClient *client,
                                                                                                      const LITERLLMChatCompletionRequest *req);
/**
 * Advance the stream and return a heap-allocated chunk, or null.
 *
 * Returns null in two cases:
 * - Clean end-of-stream: `literllm_last_error_code()` returns 0.
 * - Stream error: `literllm_last_error_code()` returns non-zero.
 *
 * The returned pointer is heap-allocated and the caller MUST free it by calling
 * `literllm_default_client_ChatCompletionChunk_free` (or the appropriate type-free function).
 *
 * # Safety
 * `handle` must be a non-null valid pointer previously returned by `literllm_default_client_chat_stream_start` and not yet
 * freed. Calling `_next` after `_free` is undefined behaviour. The handle must not be shared
 * across threads without external synchronisation.
 */
LITERLLMChatCompletionChunk *literllm_default_client_chat_stream_next(struct LITERLLMLiterllmDefaultClientChatStreamStreamHandle *handle);
/**
 * Free a stream handle created by `literllm_default_client_chat_stream_start`.
 *
 * Safe to call with a null pointer (no-op). After this call the handle pointer is invalid.
 *
 * # Safety
 * `handle` must either be null or a valid pointer previously returned by `literllm_default_client_chat_stream_start` and
 * not yet freed. Double-free is undefined behaviour.
 */
void literllm_default_client_chat_stream_free(struct LITERLLMLiterllmDefaultClientChatStreamStreamHandle *handle);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMBatchObject *literllm_default_client_cancel_batch(const LITERLLMDefaultClient *this_,
                                                          const char *batch_id);
/**
 * Poll a batch until it reaches a terminal status (Completed, Failed, Expired, Cancelled).
 *
 * Uses exponential backoff with configurable initial interval, maximum interval, and backoff
 * multiplier.
 * Optionally supports a timeout that aborts polling if exceeded.
 * \note Returns `BatchWaitError::Failed` if the batch reaches a failure terminal status.
 * Returns `BatchWaitError::Timeout` if the configured timeout is exceeded.
 * Returns `BatchWaitError::Client` for underlying client errors.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 * \code
 * # use liter_llm::client::{DefaultClient, ClientConfig, WaitForBatchConfig};
 * # async fn run() -> Result<(), Box<dyn std::error::Error>> {
 * let client = DefaultClient::new(ClientConfig::new("api-key"), None)?;
 * let batch = client.wait_for_batch("b-123", WaitForBatchConfig::default()).await?;
 * println!("Batch completed: {:?}", batch.status);
 * # Ok(())
 * # }
 * \endcode
 */
LITERLLMBatchObject *literllm_default_client_wait_for_batch(const LITERLLMDefaultClient *this_,
                                                            const char *batch_id,
                                                            const LITERLLMWaitForBatchConfig *config);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMResponseObject *literllm_default_client_create_response(const LITERLLMDefaultClient *this_,
                                                                const LITERLLMCreateResponseRequest *req);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMResponseObject *literllm_default_client_retrieve_response(const LITERLLMDefaultClient *this_,
                                                                  const char *response_id);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMResponseObject *literllm_default_client_cancel_response(const LITERLLMDefaultClient *this_,
                                                                const char *response_id);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMBudgetConfig *literllm_budget_config_default(void);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMCacheConfig *literllm_cache_config_default(void);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMRateLimitConfig *literllm_rate_limit_config_default(void);