packages/csharp/LiterLlm/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_cancel_batch")]
    internal static extern IntPtr DefaultClientCancelBatch(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string batchId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_wait_for_batch")]
    internal static extern IntPtr DefaultClientWaitForBatch(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string batchId,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_create_response")]
    internal static extern IntPtr DefaultClientCreateResponse(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_retrieve_response")]
    internal static extern IntPtr DefaultClientRetrieveResponse(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string responseId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_cancel_response")]
    internal static extern IntPtr DefaultClientCancelResponse(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string responseId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_budget_config_default")]
    internal static extern IntPtr BudgetConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_cache_config_default")]
    internal static extern IntPtr CacheConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rate_limit_config_default")]
    internal static extern IntPtr RateLimitConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_chat_stream_start")]
    internal static extern IntPtr DefaultClientChatStreamStart(IntPtr client, IntPtr req);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_chat_stream_next")]
    internal static extern IntPtr DefaultClientChatStreamNext(IntPtr handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_chat_stream_free")]
    internal static extern void DefaultClientChatStreamFree(IntPtr handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_free_string")]
    internal static extern void FreeString(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_free_bytes")]
    internal static extern void FreeBytes(IntPtr ptr, UIntPtr len, UIntPtr cap);
}
